# strategy_lab

./: .env.production  .gitignore  .pre-commit-config.yaml  AGENT_REGISTRY.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  HOW_TO_RUN_BACKTESTS.md  LICENSE  Makefile  PHASE_1_4_WEBSOCKET_COMPLETION.md  PHASE_2_1_LOAD_TESTING_COMPLETION.md  PHASE_2_2_FAULT_TOLERANCE_COMPLETION.md  PRODUCTION_DEPLOYMENT_TASKS.md  PRODUCTION_READINESS_PLAN.md  PRODUCTION_READINESS_SUMMARY.md  QUICKSTART.md  README.md  SYSTEM_STATUS_REPORT.md  backtest.py  check_data.py  debug_data_loading.py  debug_strategy.py  demo_backtest.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  enhanced_backtest.py  example_config.yaml  local_config.yaml  monitor.py  practical_backtest.py  production_backtest.py  production_config.yaml  production_setup.py  pyproject.toml  quick_start.py  (+10 more)
.bmad-core/: install-manifest.yaml
.claude/: RUST_SUPPORT_SUMMARY.md  START_SWARM_GUIDE.md  demo_agent_selection.py  demo_comprehensive_rust.py  demo_rust_integration.py  test-agent-setup.py  test_basic_functionality.py  test_rust_debug_selection.py  test_rust_selection.py  validate_workflow_agents.py
.claude/agent_selection/: __init__.py  agent_capabilities.py  agent_selector.py  select-workflow.py  task_classifier.py  workflow_optimizer.py
.claude/config/: checkpoint_config.yaml  mcp-servers.yaml
.claude/scripts/: assign-mcp-new-agents.py  auto_resume_cli.py  integrate-new-agents.sh  select-workflow.py  test-mcp-integration.py  update-agents-mcp.py
.claude/state/: __init__.py  checkpoint_manager.py  serializers.py  session_manager.py
.claude/tests/: test_agent_selection.py  test_auto_resume_integration.py  test_error_detection.py  test_session_state.py
.claude/utils/: __init__.py  error_detector.py  error_types.py  recovery_handler.py
.claude/workflows/: active-workflow.json  data-science-workflow.json  enhanced-team-orchestration.json  fullstack-app-workflow.json  strategy-lab-workflow.json  team-orchestration.json
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  alembic.ini  requirements-dev.txt  requirements.txt  run_dev.py  seed_database.py  test_api.py  test_api_with_db.py  test_database.py  test_websocket.py
backend/app/: __init__.py  main.py
backend/migrations/: env.py
benches/: data_ingestion.rs  performance_benchmarks.rs
configs/strategies/: bid_ask_bounce.yaml  order_book_imbalance.yaml
data/: MNQ_parquet_files.json  MNQ_parquet_files.md  schema.json
docs/: Architecture_Web_UI.md  DEPLOYMENT.md  PRD_Strategy_Lab.md  PRD_Web_UI.md  PRD_Web_UI_Enhanced.md  SERVICE_SETUP.md  backtest-system-architecture-plan.md  getting-started.md  mcp-servers-integration-guide.md  phase1_completion_summary.md  prd.md  project-brief.md  shadcn-ui-implementation-guide.md  technical-architecture.md
docs/Architecture_Web_UI/: 1-executive-summary.md  10-monitoring-observability.md  11-future-architecture-considerations.md  12-architecture-decision-records-adrs.md  2-system-architecture-overview.md  3-frontend-architecture.md  4-backend-architecture.md  5-data-architecture.md  6-security-architecture.md  7-performance-architecture.md  8-deployment-architecture.md  9-development-workflow.md  appendix-a-api-specification.md  appendix-b-component-specifications.md  index.md
docs/PRD_Web_UI/: 1-executive-summary.md  10-future-enhancements.md  11-success-criteria.md  12-appendices.md  2-problem-statement.md  3-target-user.md  4-functional-requirements.md  5-technical-requirements.md  6-user-interface-design.md  7-success-metrics.md  8-implementation-phases.md  9-dependencies-risks.md  index.md
docs/PRD_Web_UI_Enhanced/: 1-executive-summary.md  10-micro-interactions-delight.md  11-design-system-components.md  12-future-ux-enhancements.md  13-ux-success-metrics.md  2-user-journey-experience.md  3-information-architecture.md  4-interaction-design.md  5-visual-design-system.md  6-data-visualization-excellence.md  7-performance-perceived-speed.md  8-accessibility-usability.md  9-detailed-ui-specifications.md  appendix-ui-component-examples.md  index.md
docs/architecture/: 01-overview.md  02-system-architecture.md  03-module-structure.md  04-data-architecture.md  05-strategy-framework.md  06-backtesting-engine.md  07-optimization-architecture.md  08-performance-scalability.md  09-configuration-deployment.md  10-testing-security.md  README.md  coding-standards.md  source-tree.md  tech-stack.md
docs/epics/: epic-1-foundation.md  epic-2-core-features.md  epic-3-analysis-tools.md  index.md  (+2 more)
examples/: README.md  data_types_demo.rs  run_backtest.py  run_parallel_backtest.py
frontend/: .dockerignore  .env.production  .eslintrc.js  .prettierrc  Dockerfile  Dockerfile.dev  jest.config.js  next.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  prettier.config.js  tailwind.config.ts
knowledge-base/: algo-trading-of-index-futures.md  data.md  hftbacktest-data-handling.md  hftbacktest.md  roll-forward-strategy.md  trading-NQ-and-MNQ-futures.md  uv-package-manager.md  vectorbt.md
migrations/: 001_create_schema.sql
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: backup-strategy-lab.sh  backup.sh  build_production.sh  health-check.sh  install_timescaledb.sh  manage-services.sh  restore-strategy-lab.sh  restore.sh  run_migrations.sh  setup-services.sh  setup_database.sh  setup_nginx.sh  setup_services.sh
src/: lib.rs
standalone_api/: Cargo.toml
standalone_api/migrations/: 001_initial_schema.sql  002_timescaledb_schema.sql
standalone_api/src/: db.rs  main.rs  websocket.rs
static/: dashboard.html
terraform/: cloud-init.yaml  database.tf  droplet.tf  main.tf  monitoring.tf  outputs.tf  storage.tf  variables.tf
tests/: __init__.py  fault_tolerance.rs  full_integration.rs  integration_tests.rs  load_testing.rs  monitoring_integration.rs  real_data_validation.rs  test_data_ingestion.py  websocket_integration.rs
(+525 files in other folders)
